Add umi, fix bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,15 @@
-cmake_minimum_required(VERSION 3.18)
-set(CMAKE_C_COMPILER "/usr/local/Cellar/gcc@8/8.4.0_1/bin/gcc-8")
-set(CMAKE_CXX_COMPILER "/usr/local/Cellar/gcc@8/8.4.0_1/bin/g++-8")
+cmake_minimum_required(VERSION 3.10)
 
 project(RabbitQCPlus)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(CMAKE_CXX_FLAGS "-O3 -g -ffast-math -lz ${CMAKE_CXX_FLAGS}")
+set(CMAKE_CXX_FLAGS "-O3 -g -w -ffast-math ${CMAKE_CXX_FLAGS}")
 #add_definitions(-DVec512)
 
 #set(CMAKE_CXX_FLAGS " -g  -lz ${CMAKE_CXX_FLAGS}")
 
 aux_source_directory(./src/ DIR_SRCS)
 add_executable(RabbitQCPlus ${DIR_SRCS})
-#target_link_libraries(RabbitQCPlus z)
+target_link_libraries(RabbitQCPlus z)
+target_link_libraries(RabbitQCPlus pthread)
